# homebrew-phorganize

./: README.md  phorganize.py  phorganize.rb  pyproject.toml  test.py
Formula/: homebrew-phorganize.rb
src/phorganize/: main.py
