[project]
name = "phorganize"
authors = [
    {name = "Rio Fujita", email = "rifujita@microsoft.com"},
]
version = "0.1.3"
license = {file = "LICENSE"}
description = "Phorganize is a python script to organize photos and videos using embedded meta data in the files."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-magic>=0.4.27",
]

[project.urls]
Homepage = "https://github.com/rioriost/phorganize"
Issues = "https://github.com/rioriost/phorganize/issues"

[project.scripts]
phorganize = "phorganize.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/phorganize"]

[tool.hatch.build.targets.sdist]
include = [
  "src/phorganize/*.py",
  "*.py",
]
exclude = [
  "phorganize.rb",
  "uv.lock",
  "dist/.DS_Store",
  ".envrc",
]
